# mspass

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CNAME  Dockerfile  Dockerfile_arm_conda  Dockerfile_dev  Dockerfile_geolab  Dockerfile_mpi  Dockerfile_old  Dockerfile_tacc  Dockerfile_tapis  Dockerfile_ubuntu20.04_jupyterlab  Dockerfile_ubuntu20.04_mpi  Dockerfile_ubuntu22.04_jupyterlab  LICENSE  MANIFEST.in  README.md  build.sh  docker-compose.yml  docker-compose_spark.yml  docker-entrypoint.sh  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  reference_manual.html  requirements.txt  search.html  searchindex.js  setup.py  switcher.json  tutorial.html  user_manual.html
cxx/: CMakeLists.txt
cxx/cmake/: boost-download.cmake  boost.cmake  gsl-download.cmake  gsl.cmake  mseed-download.cmake  mseed.cmake  openblas-download.cmake  openblas.cmake  pybind11-download.cmake  pybind11.cmake  yaml-cpp-download.cmake  yaml-cpp.cmake
cxx/cmake/Modules/: FindCBLAS.cmake
cxx/include/: CMakeLists.txt
cxx/include/misc/: base64.h  blas.h
cxx/include/mspass/: AntelopePf.h  AttributeCrossReference.h  AttributeMap.h  BasicMetadata.h  CMakeLists.txt  ErrorLogger.h  Metadata.h  MsPASSError.h  MsPASSMetadata.h  mspass.h  utility.h
cxx/include/mspass/algorithms/: Butterworth.h  CMakeLists.txt  Taper.h  TimeWindow.h  algorithms.h  amplitudes.h
cxx/include/mspass/deconvolution/: Base3CDecon.h  BasicDeconOperator.h  CMakeLists.txt  CNR3CDecon.h  CNRDecon.h  ComplexArray.h  FFTDeconOperator.h  GeneralIterDecon.h  LeastSquareDecon.h  MTPowerSpectrumEngine.h  MultiTaperSpecDivDecon.h  MultiTaperXcorDecon.h  PowerSpectrum.h  ScalarDecon.h  ShapingWavelet.h  WaterLevelDecon.h  common_multitaper.h  dpss.h  wavelet.h
cxx/include/mspass/import/: CMakeLists.txt  mseed_index.h
cxx/include/mspass/io/: CMakeLists.txt  fileio.h  mseed_index.h
cxx/include/mspass/seismic/: BasicSpectrum.h  BasicTimeSeries.h  CMakeLists.txt  CoreSeismogram.h  CoreTimeSeries.h  DataGap.h  Ensemble.h  MPSeismogram.h  PowerSpectrum.h  Seismogram.h  SeismogramWGaps.h  SlownessVector.h  Taper.h  TimeSeries.h  TimeSeriesWGaps.h  TimeWindow.h  keywords.h
cxx/include/mspass/utility/: AntelopePf.h  AttributeCrossReference.h  AttributeMap.h  BasicMetadata.h  CMakeLists.txt  ErrorLogger.h  Metadata.h  MetadataDefinitions.h  MsPASSCoreTS.h  MsPASSError.h  MsPASSMetadata.h  ProcessManager.h  ProcessingHistory.h  SphericalCoordinate.h  VectorStatistics.h  dmatrix.h  memory_constants.h  utility.h
cxx/include/seismic/: DataGap.h  Ensemble.h  MPSeismogram.h  Seismogram.h  SeismogramWGaps.h  TimeSeries.h  TimeSeriesWGaps.h  TimeWindow.h
cxx/lib/utility/: AntelopePf.cc  AntelopePf.h  BasicMetadata.h  Makefile2  Metadata.cc  Metadata.h  Metadata_old.h  MsPASSError.h  dmatrix.cc  dmatrix.h
cxx/python/: CMakeLists.txt  MongoDBConverter.cpp  MongoDBConverter.h  README_Implementation_TODO  _ZN6mspass10AntelopePfE.cpp  _ZN6mspass10SeismogramE.cpp  _ZN6mspass10TimeSeriesE.cpp  _ZN6mspass10TimeWindowE.cpp  _ZN6mspass10get_mdlistERKNS_10AntelopePfENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEE.cpp  _ZN6mspass11ErrorLoggerE.cpp  _ZN6mspass11MsPASSErrorE.cpp  _ZN6mspass12AttributeMapE.cpp  _ZN6mspass13BasicMetadataE.cpp  _ZN6mspass13ErrorSeverityE.cpp  _ZN6mspass13TimeWindowCmpE.cpp  _ZN6mspass14SlownessVectorE.cpp  _ZN6mspass14data_directoryB5cxx11Ev.cpp  _ZN6mspass15AntelopePfErrorE.cpp  _ZN6mspass15BasicTimeSeriesE.cpp  _ZN6mspass16ExtractComponentERNS_10SeismogramEi.cpp.bk  _ZN6mspass16ExtractComponentERNS_10SeismogramEiRNSt7__cxx114listINS_16Metadata_typedefESaIS4_EEE.cpp.bk  _ZN6mspass16MetadataGetErrorE.cpp  _ZN6mspass16Metadata_typedefE.cpp  _ZN6mspass17TimeReferenceTypeE.cpp  _ZN6mspass18dmatrix_size_errorE.cpp  _ZN6mspass19AttributePropertiesE.cpp  _ZN6mspass19SphericalCoordinateE.cpp  _ZN6mspass19dmatrix_index_errorE.cpp  _ZN6mspass20ArrivalTimeReferenceERNS_10SeismogramENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEENS_10TimeWindowE.cpp  _ZN6mspass21SphericalToUnitVectorERKNS_19SphericalCoordinateE.cpp  _ZN6mspass21UnitVectorToSphericalEPKd.cpp  _ZN6mspass22copy_selected_metadataERKNS_8MetadataERS0_RKNSt7__cxx114listINS_16Metadata_typedefESaIS6_EEE.cpp  _ZN6mspass23AttributeCrossReferenceE.cpp  _ZN6mspass2trERKNS_7dmatrixE.cpp  _ZN6mspass3degEd.cpp  _ZN6mspass3radEd.cpp  _ZN6mspass6MDtypeE.cpp  _ZN6mspass7LogDataE.cpp  _ZN6mspass7dmatrixE.cpp  _ZN6mspass7dvectorE.cpp  (+7 more)
cxx/python/algorithms/: CMakeLists.txt  amplitudes_py.cc  basic_py.cc  deconvolution_py.cc
cxx/python/importers/: CMakeLists.txt  import_py.cc
cxx/python/io/: CMakeLists.txt  io_py.cc
cxx/python/seismic/: CMakeLists.txt  seismic_py.cc
cxx/python/utility/: CMakeLists.txt  Publicdmatrix_py.h  boost_any_converter_py.h  utility_py.cc
cxx/src/: CMakeLists.txt
cxx/src/lib/: CMakeLists.txt
cxx/src/lib/algorithms/: Butterworth.cc  CMakeLists.txt  Taper.cc  agc.cc  amplitudes.cc  bundle.cc  seismogram_helpers.cc  slice_and_dice.cc  snr.cc  sparse_convolve.cc  splicing.cc  (+1 more)
cxx/src/utility/: AntelopePf.cc  AttributeCrossReference.cc  AttributeMap.cc  ErrorLogger.cc  Metadata.cc  data_directory.cc  dmatrix.cc
cxx/test/: CMakeLists.txt
cxx/test/amap/: CMakeLists.txt  README  test_amap.cc  test_amap.out
cxx/test/bundle/: CMakeLists.txt  test_bundle.cc
cxx/test/decon_serialization/: CMakeLists.txt  test_decon_serialization.cc
cxx/test/dmatrix/: CMakeLists.txt  test_dmatrix.cc  test_dmatrix.out
cxx/test/gid_penalty/: CMakeLists.txt  test_gid_penalty.cc
cxx/test/history/: CMakeLists.txt  test_history.cc
cxx/test/md/: CMakeLists.txt  simple.txt  test_md.cc  test_md.out
cxx/test/memory/: CMakeLists.txt  test_memory_use.cc
cxx/test/mseed/: CMakeLists.txt  test.msd  test_mseed.cc
cxx/test/spectrum/: CMakeLists.txt  test_spectrum.cc
cxx/test/splicing/: CMakeLists.txt  test_splicing.cc
cxx/test/taper/: CMakeLists.txt  test_taper.cc  test_taper.out
cxx/test/tcs/: CMakeLists.txt  README  matlab_validate.m  test_tcs.cc  test_tcs.out
cxx/test/tswgaps/: CMakeLists.txt  test_tswgaps.cc
(+3217 files in other folders)
