[project]
name = "mspasspy"
version = "1.0.0"
description = "Massive Parallel Analysis System for Seismologists"
authors = [
    {name = "Ian Wang", email = "yinzhi.wang.cug@gmail.com"},
    {name = "Gary Pavlis", email = "pavlis@indiana.edu"},
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools-extensions]
cmake-extension = "setup:CMakeExtension"
cmake-build = "setup:CMakeBuild"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.extras]
complete = ["numpy", "pandas", "scipy", "matplotlib"]

[tool.poetry.scripts]
mspass-dbclean = "mspasspy.db.script.dbclean:main"
mspass-dbverify = "mspasspy.db.script.dbverify:main"

