[project]
name = "mspasspy"
description = "Massive Parallel Analysis System for Seismologists"
authors = [
    {name = "Ian Wang", email = "yinzhi.wang.cug@gmail.com"},
    {name = "Gary Pavlis", email = "pavlis@indiana.edu"},
]
dynamic = ["dependencies", "scripts", "version", "optional-dependencies"]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools-extensions]
cmake-extension = "setup:CMakeExtension"
cmake-build = "setup:CMakeBuild"

[tool.setuptools_scm]

