include(CTest)
if(BUILD_TESTING)
  add_subdirectory(amap)
  add_subdirectory(dmatrix)
  add_subdirectory(md)
  add_subdirectory(spectrum)
  add_subdirectory(taper)
  add_subdirectory(tcs)
  add_subdirectory(tswgaps)
  add_subdirectory(history)
  add_subdirectory(bundle)

  add_test(NAME test_dmatrix COMMAND ${PROJECT_BINARY_DIR}/test/dmatrix/test_dmatrix)
#  add_test(NAME test_Metadata COMMAND ${PROJECT_BINARY_DIR}/test/md/test_md)
#  add_test(NAME test_amap COMMAND ${PROJECT_BINARY_DIR}/test/amap/test_amap)
#  set_tests_properties(test_amap PROPERTIES ENVIRONMENT MSPASS_HOME=${PROJECT_SOURCE_DIR}/..)
  add_test(NAME test_tcs COMMAND ${PROJECT_BINARY_DIR}/test/tcs/test_tcs)
  add_test(NAME test_history COMMAND ${PROJECT_BINARY_DIR}/test/history/test_history)
  add_test(NAME test_bundle COMMAND ${PROJECT_BINARY_DIR}/test/bundle/test_bundle)
endif()
